<resources>
    <string name="app_name">HeatPump Master</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_game">Start Game</string>
    <string name="options">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="how_to_play">How to play</string>
    <string name="highscores">Highscores</string>
    <string name="interesting_facts">Interesting Facts</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="temperature_too_high_warning">Temperature too high!</string>
    <string name="temperature_too_low_warning">Temperature too low!</string>

    <string name="water_too_much_warning">Too much warm water!</string>
    <string name="water_not_engough_warning">Not enough warm water!</string>

    <string name="goal">Goal</string>
    <string name="time">Time</string>

    <string name="repeat_level">Repeat Level</string>
    <string name="next_level">Next Level</string>
    <string name="co2_savings_semicolon">CO₂-Savings: </string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="overall">Overall</string>

    <string name="co2_savings_total_semicolon">CO₂ savings total:</string>
    <string name="gas_savings_total_semicolon">Gas savings total:</string>
    <string name="best_result_semicolon">Best result:</string>

    <string name="play">Play</string>
    <string name="menu">Menu</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="highscore_submitted">Highscore submitted</string>
    <string name="co2_savings">CO₂-Savings</string>
    <string name="comfort">Comfort</string>
    <string name="c02_savings_total">CO₂-Savings total: </string>
    <string name="heat">Heat</string>
    <string name="level_finished">Level finished</string>


    <string name="level_selection">Select Level</string>

    <string name="cap_efficiency">Efficiency of different heating technologies</string>
    <string name="cap_energy_consumption">Energy consumption in households (EU)</string>
    <string name="cap_emissions">Emissions of different heating technologies</string>
    <string name="cap_grid">Grid stabilization</string>

    <string name="top_scores_for_this_level">Top scores for this level</string>

    <string name="info_efficiency_link">



    <![CDATA[
    &#8226; Heat pumps are by far the most efficient heating technology.<br/>
    &#8226; They convert 1 kWh of electricity into 3 to 4 kWh of heat on average.<br/>
    &#8226; Ground-source heat pumps offer greater efficiency than air-source ones, but at higher installation costs.<br/>
    &#8226; Fridges and freezers use the same thermodynamic process as a heat pump, moving heat from inside the appliance to the outside.<br/>
    &#8226; Sources: <a href="https://www.entega.de/blog/wirkungsgrad-waermepumpe/">Prof. Dipl. –Ing. W. Schenk, Hochschule München, 2020</a> and
    <a href="https://www.energie-experten.org/heizung/waermepumpe/waermepumpenheizung/wirkungsgrad">Greenhouse Media GmbH, 2022</a> (accessed on 14.04.2025).<br/>
    ]]>
    </string>


    <string name="info_heating_link">
    <![CDATA[
    &#8226; In the EU, the main use of energy by households is for residential heating, followed by water heating.<br/>
    &#8226; In 2022, the residential sector accounted for 26% of the total final energy consumption in the EU.<br/>
       &#8226; Source: <a href="https://ec.europa.eu/eurostat/web/products-eurostat-news/w/ddn-20240605-2">Eurostat, 2024</a> (accessed on 14.04.2025).<br/>
    ]]>
    </string>

    <string name="info_emissions_link">
    <![CDATA[
    &#8226; Replacing fossil-fuel heating with a heat pump can significantly reduce CO₂ emissions.<br/>
    &#8226; Powered by renewables, heat pumps emit almost no greenhouse gases—emissions drop further as renewable grid share rises.<br/>
    &#8226; Source: <a href="https://www.waermepumpe.de/waermepumpe/klimaschutz/">Bundesverband Wärmepumpe (BWP) e.V., 2024</a> (accessed on 14.04.2025).<br/>
    ]]>
    </string>

    <string name="info_stabilizing_grids_link">
    <![CDATA[
    &#8226; Heat pumps support grid stability by flexibly balancing supply and demand—especially with smart grid technologies.<br/>
    &#8226; Heat pumps shift energy use by storing heat when renewable generation is high and using it during peak demand.<br/>
    &#8226; By shifting their energy consumption, heat pumps can effectively relieve the load on the electricity grid and reduce the need for grid expansion.<br/>
    &#8226; Source: <a href="https://www.waermepumpe.de/fileadmin/user_upload/Kurzstudie_FlexWP.pdf">Fraunhofer IEE - Flexible Wärmepumpen im Verteilnetz, 2022</a> (accessed on 14.04.2025).<br/>
    ]]>
    </string>
    <string name="made_to_highscore">Congratulations! You made it to the High Score list!</string>
    <string name="_1_consume_electricity_to_heat_up_the_building_or_the_hot_water_tank">1. Consume electricity to heat up the building or the hot water tank.</string>
    <string name="press_this_button_to_heat">Press this button to heat.</string>
    <string name="switch_between_heating_the_building_or_the_hot_water_tank">Switch between heating the building or the hot water tank.</string>
    <string name="_2_only_use_electricity_from_solar_and_wind_to_save_co2">2. Only use electricity from solar and wind to save CO₂.</string>
    <string name="_3_avoid_electricity_from_gas_and_coal">3. Do not use electricity generated from gas or coal.</string>
    <string name="_4_use_solar_and_wind_when_the_element_are_under_the_red_line_in_the_middle_of_the_screen">4. Use solar and wind power when the solar and wind indicators are below the red line in the center of the screen.</string>
    <string name="_5_comfort_limits">5. Make sure the temperature is within the comfort range (20—22° C) and \nthe hot water in the tank is available but does not exceed the capacity of the tank.</string>
    <string name="_6_air_the_room_or_have_a_shower">6. To improve your comfort score, air the room or take a shower by tapping the floating buttons.\n This will lower the temperature in the building and the hot water in the tank.</string>
    <string name="instructions">Instructions</string>
    <string name="all_levels_finished_message">You have finished all levels!\nCongratulations 🏆</string>

    <string name="hint_scroll_right">Scroll right to see more →\nScroll text down for sources↓</string>
    <string name="hint_scroll_down">You may need to scroll down ↓</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="privacy_policy_message">By submitting a high score, you agree that your entered name, score, and submission date will be stored for leaderboard purposes. No other data is collected. If you want your data to be deleted, please send an E-Mail to thomas.dengiz@yahoo.de. If your score is not among the top 10 after one month, the entry will be automatically deleted.</string>


</resources>